--- a/索引.html
+++ b/索引.html
@@ -132,7 +132,7 @@
         <!-- 首頁內容 -->
         <div id="intro-section" class="flex flex-col items-center">
             <h1 class="font-serif text-5xl sm:text-6xl font-bold text-center text-gray-800 mb-4 tracking-wide font-serif text-shadow" style="font-family: 'Noto Serif TC', serif;">伍茶時光占卜</h1>
-            <p class="text-xl sm:text-2xl font-bold text-gray-500 text-center mb-16 text-shadow">抽出您未來一周的心靈能量卡</p>
+            <p class="text-xl sm:text-2xl font-bold text-gray-500 text-center mb-16 text-shadow">抽出未來一周的心靈能量卡</p>
             <button id="drawButton" class="btn">
                 開始抽卡
             </button>
