--- a/索引.html
+++ b/索引.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>伍茶時光占卜</title>
+    <title>伍茶占卜</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* 引入中文字體 */
@@ -131,7 +131,7 @@
         
         <!-- 首頁內容 -->
         <div id="intro-section" class="flex flex-col items-center">
-            <h1 class="font-serif text-5xl sm:text-6xl font-bold text-center text-gray-800 mb-4 tracking-wide font-serif text-shadow" style="font-family: 'Noto Serif TC', serif;">伍茶時光占卜</h1>
+            <h1 class="font-serif text-5xl sm:text-6xl font-bold text-center text-gray-800 mb-4 tracking-wide font-serif text-shadow" style="font-family: 'Noto Serif TC', serif;">伍茶占卜</h1>
             <p class="text-xl sm:text-2xl font-bold text-gray-500 text-center mb-16 text-shadow">抽出未來一周的心靈能量卡</p>
             <button id="drawButton" class="btn">
                 開始抽卡
@@ -146,7 +146,7 @@
             </div>
             <div class="text-center mt-8">
                 <button id="resetButton" class="btn hidden">
-                    祝您好運
+                    重新占卜
                 </button>
             </div>
         </div>
@@ -261,7 +261,7 @@
                 cardContainer.classList.add('revealed');
                 revealedCardCount++;
 
-                // 當三張牌都翻開時，顯示「祝您好運」按鈕
+                // 當三張牌都翻開時，顯示「重新占卜」按鈕
                 if (revealedCardCount === 3) {
                     resetButton.classList.remove('hidden');
                 }
@@ -291,7 +291,7 @@
             });
         });
 
-        // 處理祝您好運
+        // 處理重新占卜
         resetButton.addEventListener('click', () => {
             drawSection.classList.add('hidden');
             introSection.classList.remove('hidden');
